--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="ujSzallas.html">Szállások</a>
+                    <a class="nav-link" href="szallasok.html">Szállások</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="szallasFelvetel.html">Új szállás felvétele</a>
+                    <a class="nav-link" href="ujSzallas.html">Új szállás felvétele</a>
                 </li>
             </ul>
         </div>
     </nav>
-
 
 <div class="card2">
     <p>
